src/objects/Current_Inventory_Component__c.object
<CustomObject>
    <description>Updated Stock Status of Inventory at all Stock Points</description>
    <fields>
        <fullName>Component_Code__c</fullName>
        <label>Component Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a component from Product Master</inlineHelpText>
        <label>Component</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Current Stock</relationshipLabel>
        <relationshipName>Current_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Unit__c</fullName>
        <label>Cost/Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Defective_Quantity_in_Hand__c</fullName>
        <label>Defective Quantity in Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_Stock_Value__c</fullName>
        <formula>Defective_Quantity_in_Hand__c  *  Cost_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defective Stock Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Center_Name__c</fullName>
        <formula>Stock_Point__r.Service_Center_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Name__c</fullName>
        <formula>Stock_Point__r.Service_Engineer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Point</label>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipName>R00N20000001R4tEEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Usable_Quantity_in_Hand__c</fullName>
        <label>Usable Quantity in Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usable_Stock_Value__c</fullName>
        <formula>( Usable_Quantity_in_Hand__c )  *  ( Cost_Unit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usable Stock Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Current Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Component_Code__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Usable_Quantity_in_Hand__c</columns>
        <columns>Defective_Quantity_in_Hand__c</columns>
        <columns>Stock_Point__c</columns>
        <columns>Cost_Unit__c</columns>
        <columns>Usable_Stock_Value__c</columns>
        <columns>Defective_Stock_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Transactions</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Defective_Quantity_in_Hand__c</columns>
        <columns>Usable_Quantity_in_Hand__c</columns>
        <columns>Stock_Point__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Transactions</label>
    </listViews>
    <nameField>
        <label>Component Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Stock</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>